migrate to solid js

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>animation</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Code Animation</title>
-  <link data-trunk rel="copy-dir" href="public" />
-  <link data-trunk rel="rust" data-wasm-opt="3" />
-</head>
+  <body>
+    <div id="root"></div>
 
-<body></body>
-
+    <script src="/src/index.tsx" type="module"></script>
+  </body>
 </html>
