first preview release is ready

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>animation</title>
-  </head>
 
-  <body>
-    <div id="root"></div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>animation</title>
+</head>
 
-    <script src="/src/index.tsx" type="module"></script>
-  </body>
+<body id="root" class="container">
+  <pre id="code" class="code custom"></pre>
+
+  <script src="/src/index.tsx" type="module"></script>
+</body>
+
 </html>
