--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="./App.css" />
+  <link rel="stylesheet" href="./styles.css" />
   <title>animation</title>
 </head>
 
