add markdown support

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body id="root" class="container">
   <pre id="code" class="code custom"></pre>
-
+  <div id="markdown"></div>
   <script src="/src/index.tsx" type="module"></script>
 </body>
 
