change the root system first iteration

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="root" class="container">
-  <pre id="code" class="code custom"></pre>
+  <pre id="-1:-1@" class="code custom"></pre>
   <div id="markdown"></div>
   <script src="/src/index.tsx" type="module"></script>
 </body>
