give markdown support second chance

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body id="root" class="container">
-  <pre id="-1:-1@" class="code custom"></pre>
-  <div id="markdown"></div>
+  <pre id="-1:-1@-2" class="code custom"></pre>
+  <pre id="-1:-1@-1"></pre>
   <script src="/src/index.tsx" type="module"></script>
 </body>
 
