animate code inside markdown

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="root" class="container">
-  <pre id="-1:-1@-2" class="code custom"></pre>
+  <pre id="-1:-1@-2" class="code"></pre>
   <pre id="-1:-1@-1"></pre>
   <script src="/src/index.tsx" type="module"></script>
 </body>
