--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <title>animation</title>
 </head>
 
-<body id="root" class="container">
-  <pre id="-1:-1@-2" class="code"></pre>
-  <pre id="-1:-1@-1"></pre>
+<body id="root">
   <script src="/src/index.tsx" type="module"></script>
 </body>
 
